--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -1,94 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textViewStatistics"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/statistics"
+        android:textColor="@color/header"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/textViewAccountGroups"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayoutStatistics"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewStatistics"
+        app:tabMode="auto">
+
+        <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/account_groups"
-            android:textColor="@color/header"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-        <muzdima.mymoney.view.AccountGroupSelector
-            android:id="@+id/accountGroupSelector10"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:text="@string/accounts" />
 
-        <muzdima.mymoney.view.AccountGroupSelector
-            android:id="@+id/accountGroupSelector11"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <muzdima.mymoney.view.AccountGroupSelector
-            android:id="@+id/accountGroupSelector12"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <muzdima.mymoney.view.AccountGroupSelector
-            android:id="@+id/accountGroupSelector13"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <muzdima.mymoney.view.AccountGroupSelector
-            android:id="@+id/accountGroupSelector14"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <muzdima.mymoney.view.AccountGroupSelector
-            android:id="@+id/accountGroupSelector15"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/textViewCategories"
+        <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/categories_month"
-            android:textColor="@color/header"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:text="@string/account_groups" />
+    </com.google.android.material.tabs.TabLayout>
 
-        <muzdima.mymoney.view.CategorySelectorCurrentMonth
-            android:id="@+id/categorySelector10"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+    <FrameLayout
+        android:id="@+id/layoutStatistics"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabLayoutStatistics"/>
 
-        <muzdima.mymoney.view.CategorySelectorCurrentMonth
-            android:id="@+id/categorySelector11"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <muzdima.mymoney.view.CategorySelectorCurrentMonth
-            android:id="@+id/categorySelector12"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <muzdima.mymoney.view.CategorySelectorCurrentMonth
-            android:id="@+id/categorySelector13"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <muzdima.mymoney.view.CategorySelectorCurrentMonth
-            android:id="@+id/categorySelector14"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <muzdima.mymoney.view.CategorySelectorCurrentMonth
-            android:id="@+id/categorySelector15"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-
-    </LinearLayout>
-
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
