--- a/app/src/main/res/layout/account_selector.xml
+++ b/app/src/main/res/layout/account_selector.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <TextView
+    <muzdima.mymoney.view.MoneyTextView
         android:id="@+id/textViewAccountSum"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
