--- a/app/src/main/res/layout/transfer_item.xml
+++ b/app/src/main/res/layout/transfer_item.xml
@@ -35,7 +35,7 @@
         app:layout_constraintStart_toEndOf="@+id/checkBoxTransferItem"
         app:layout_constraintTop_toBottomOf="@+id/textViewFromTransferItem" />
 
-    <TextView
+    <muzdima.mymoney.view.MoneyTextView
         android:id="@+id/textViewSumTransferItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -66,13 +66,11 @@
 
 
     <View
-        android:id="@+id/divider"
-        android:layout_width="408dp"
+        android:layout_width="0dp"
         android:layout_height="2dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="16dp"
         android:background="@color/header"
-        app:layout_constraintTop_toBottomOf="@+id/textViewToTransferItem"
-        tools:ignore="MissingConstraints" />
-    <View style="@style/Divider.Horizontal"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewToTransferItem" />
 </androidx.constraintlayout.widget.ConstraintLayout>
