--- a/app/src/main/res/values/sql_select_for_spinner.xml
+++ b/app/src/main/res/values/sql_select_for_spinner.xml
@@ -23,7 +23,7 @@
                 [category].[parent_id] AS [parent_id],
                 [category].[is_visible] AS [is_visible]
             FROM [category]
-                UNION
+                UNION ALL
             SELECT
                 [categories].[id] AS [id],
                 [category].[name] || \'>\' || [categories].[name] AS [name],
@@ -44,5 +44,26 @@
             [account_group].[name] AS [text],
             [account_group].[is_visible] AS [is_visible]
         FROM [account_group];
+    </string>
+    <string name="sql_get_currencies_by_category_for_spinner">
+        WITH RECURSIVE [category_ids_filter]([category_id]) AS
+        (
+            SELECT ?1 AS [category_id]
+                UNION ALL
+            SELECT [category].[id] AS [category_id]
+            FROM [category_ids_filter]
+            INNER JOIN [category] ON [category].[parent_id] = [category_ids_filter].[category_id]
+        )
+        SELECT
+            [currency].[id] AS [id],
+            [currency].[name] AS [text],
+            [currency].[is_visible] AS [is_visible]
+        FROM [currency]
+        WHERE [currency].[id] IN (
+            SELECT [account].[currency_id]
+            FROM [transaction]
+            INNER JOIN [account] ON [account].[id] = [transaction].[account_id]
+            WHERE [transaction].[is_committed] = 1 AND [transaction].[category_id] IN [category_ids_filter] AND [transaction].[created_at_utc] > ?2 AND [transaction].[created_at_utc] <![CDATA[<]]> ?3
+        );
     </string>
 </resources>
