--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,22 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_actions"
-        android:title="@string/menu_actions" />
-    <item
-        android:id="@+id/menu_draft"
-        android:title="@string/menu_draft" />
-    <item
-        android:id="@+id/menu_dictionaries"
-        android:title="@string/menu_dictionaries" />
-    <item
-        android:id="@+id/menu_import_export"
-        android:title="@string/menu_import_export" />
-    <item
-        android:id="@+id/menu_statistics"
-        android:title="@string/menu_statistics" />
-    <item
-        android:id="@+id/menu_statistics_monthly"
-        android:title="@string/menu_statistics_monthly" />
+        android:id="@+id/overflowMenu"
+        android:icon="@drawable/ic_menu"
+        android:title=""
+        app:showAsAction="always">
+        <menu>
+            <item
+                android:id="@+id/menu_actions"
+                android:icon="@drawable/ic_menu_actions"
+                android:title="@string/menu_actions" />
+            <item
+                android:id="@+id/menu_draft"
+                android:icon="@drawable/ic_menu_draft"
+                android:title="@string/menu_draft" />
+            <item
+                android:id="@+id/menu_dictionaries"
+                android:icon="@drawable/ic_menu_dictionaries"
+                android:title="@string/menu_dictionaries" />
+            <item
+                android:id="@+id/menu_import_export"
+                android:icon="@drawable/ic_menu_import_export"
+                android:title="@string/menu_import_export" />
+            <item
+                android:id="@+id/menu_statistics"
+                android:icon="@drawable/ic_menu_statistics"
+                android:title="@string/menu_statistics" />
+            <item
+                android:id="@+id/menu_statistics_monthly"
+                android:icon="@drawable/ic_menu_statistics_monthly"
+                android:title="@string/menu_statistics_monthly" />
+            <item
+                android:id="@+id/menu_settings"
+                android:icon="@drawable/ic_menu_settings"
+                android:title="@string/menu_settings" />
+        </menu>
+    </item>
+
+
 </menu>
