--- a/app/src/main/res/layout/account_selector.xml
+++ b/app/src/main/res/layout/account_selector.xml
@@ -35,7 +35,8 @@
         android:layout_width="48dp"
         android:layout_height="50dp"
         android:layout_marginEnd="4dp"
-        android:text="@string/action_button_label"
+        android:contentDescription="@string/account_action"
+        app:icon="@drawable/ic_action_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
