--- a/app/src/main/res/layout/activity_statistics_monthly.xml
+++ b/app/src/main/res/layout/activity_statistics_monthly.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
-        android:text="@string/button_prev_day_label"
+        android:contentDescription="@string/before"
+        app:icon="@drawable/ic_navigate_before"
         app:layout_constraintEnd_toStartOf="@+id/textViewDateStatisticsMonthly"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +41,8 @@
         android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
-        android:text="@string/button_next_day_label"
+        android:contentDescription="@string/next"
+        app:icon="@drawable/ic_navigate_next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textViewDateStatisticsMonthly"
