--- a/app/src/main/res/layout/dictionary_item.xml
+++ b/app/src/main/res/layout/dictionary_item.xml
@@ -48,7 +48,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/dictionary_edit_button_label"
+        android:contentDescription="@string/edit_button_label"
+        app:icon="@drawable/ic_action_edit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
