--- a/app/src/main/res/layout/transaction_item.xml
+++ b/app/src/main/res/layout/transaction_item.xml
@@ -72,8 +72,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="2dp"
-        android:text="@string/action_button_transaction_item_label"
-        android:textSize="11sp"
+        android:contentDescription="@string/edit_button_label"
+        app:icon="@drawable/ic_action_edit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
