--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,37 +3,56 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/overflowMenu"
+        android:id="@+id/menuOpen"
         android:icon="@drawable/ic_menu"
         android:title=""
         app:showAsAction="always">
         <menu>
             <item
-                android:id="@+id/menu_actions"
+                android:id="@+id/menuActions"
                 android:icon="@drawable/ic_menu_actions"
                 android:title="@string/menu_actions" />
             <item
-                android:id="@+id/menu_draft"
+                android:id="@+id/menuDraft"
                 android:icon="@drawable/ic_menu_draft"
                 android:title="@string/menu_draft" />
             <item
-                android:id="@+id/menu_dictionaries"
+                android:id="@+id/menuDictionaries"
                 android:icon="@drawable/ic_menu_dictionaries"
-                android:title="@string/menu_dictionaries" />
+                android:title="@string/menu_dictionaries">
+                <menu>
+                    <item
+                        android:id="@+id/menuDictionaryCurrencies"
+                        android:icon="@drawable/ic_menu_dictionary_currencies"
+                        android:title="@string/menu_dictionary_currencies" />
+                    <item
+                        android:id="@+id/menuDictionaryCategories"
+                        android:icon="@drawable/ic_menu_dictionary_categories"
+                        android:title="@string/menu_dictionary_categories" />
+                    <item
+                        android:id="@+id/menuDictionaryAccounts"
+                        android:icon="@drawable/ic_menu_dictionary_accounts"
+                        android:title="@string/menu_dictionary_accounts" />
+                    <item
+                        android:id="@+id/menuDictionaryAccountGroups"
+                        android:icon="@drawable/ic_menu_dictionary_account_groups"
+                        android:title="@string/menu_dictionary_account_groups" />
+                </menu>
+            </item>
             <item
-                android:id="@+id/menu_import_export"
+                android:id="@+id/menuImportExport"
                 android:icon="@drawable/ic_menu_import_export"
                 android:title="@string/menu_import_export" />
             <item
-                android:id="@+id/menu_statistics"
+                android:id="@+id/menuStatistics"
                 android:icon="@drawable/ic_menu_statistics"
                 android:title="@string/menu_statistics" />
             <item
-                android:id="@+id/menu_statistics_monthly"
+                android:id="@+id/menuStatisticsMonthly"
                 android:icon="@drawable/ic_menu_statistics_monthly"
                 android:title="@string/menu_statistics_monthly" />
             <item
-                android:id="@+id/menu_settings"
+                android:id="@+id/menuSettings"
                 android:icon="@drawable/ic_menu_settings"
                 android:title="@string/menu_settings" />
         </menu>
